Correct contrast, language, stucture, sematique, remove css code in HTML and white text

--- a/style.css
+++ b/style.css
@@ -362,6 +362,31 @@ a:hover {
     z-index: 2;
 }
 
+/*********************************************
+*
+*                            Correction
+*
+**********************************************/
+
+
+.keywords{
+    color:red;
+}
+.image-resize-mode{
+    width:100px;
+
+}
+.navbar-brand> img {
+    height:40px;
+
+}
+
+/*********************************************
+*
+*                            End Correction
+*
+**********************************************/
+
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
@@ -651,7 +676,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #1C1C1C!important;
 }
 
 .container {
@@ -736,7 +761,11 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: white!important;
+}
+.black{
+    color: #000000;
+
 }
 
 .portfolio-thumb {
@@ -779,7 +808,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #333333;
     color: #FFFFFF!important;
 }
 
@@ -790,6 +819,7 @@ h4 {
 
 .ltc-white {
     color: #FFFFFF!important;
+    color: red;
 }
 
 .ltc-white:hover {
